; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_userhold.c_dsl_dataset_user_release_onexit.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_userhold.c_dsl_dataset_user_release_onexit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32 }

@FTAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [67 x i8] c"couldn't release holds on pool=%s because pool is no longer loaded\00", align 1
@.str.1 = private unnamed_addr constant [88 x i8] c"couldn't release holds on pool=%s because pool is no longer loaded (guid doesn't match)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @dsl_dataset_user_release_onexit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dsl_dataset_user_release_onexit(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %3, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @FTAG, align 4
  %12 = call i32 @spa_open(i32 %10, i32** %4, i32 %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %1
  %16 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @zfs_dbgmsg(i8* getelementptr inbounds ([67 x i8], [67 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %51

20:                                               ; preds = %1
  %21 = load i32*, i32** %4, align 8
  %22 = call i64 @spa_load_guid(i32* %21)
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp ne i64 %22, %25
  br i1 %26, label %27, label %35

27:                                               ; preds = %20
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 2
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @zfs_dbgmsg(i8* getelementptr inbounds ([88 x i8], [88 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  %32 = load i32*, i32** %4, align 8
  %33 = load i32, i32* @FTAG, align 4
  %34 = call i32 @spa_close(i32* %32, i32 %33)
  br label %51

35:                                               ; preds = %20
  %36 = load i32*, i32** %4, align 8
  %37 = call i32 @spa_get_dsl(i32* %36)
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = call i32 @dsl_dataset_user_release_tmp(i32 %37, i32 %40)
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %43 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 8
  %45 = call i32 @fnvlist_free(i32 %44)
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %47 = call i32 @kmem_free(%struct.TYPE_3__* %46, i32 16)
  %48 = load i32*, i32** %4, align 8
  %49 = load i32, i32* @FTAG, align 4
  %50 = call i32 @spa_close(i32* %48, i32 %49)
  br label %51

51:                                               ; preds = %35, %27, %15
  ret void
}

declare dso_local i32 @spa_open(i32, i32**, i32) #1

declare dso_local i32 @zfs_dbgmsg(i8*, i32) #1

declare dso_local i64 @spa_load_guid(i32*) #1

declare dso_local i32 @spa_close(i32*, i32) #1

declare dso_local i32 @dsl_dataset_user_release_tmp(i32, i32) #1

declare dso_local i32 @spa_get_dsl(i32*) #1

declare dso_local i32 @fnvlist_free(i32) #1

declare dso_local i32 @kmem_free(%struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
